# ffroute

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
benchmarks/: openapi_bench.py
examples/: fastapi_app.py  starlette_app.py
python/ffroute/: __init__.py  _fastapi.py  _starlette.py
src/: lib.rs
tests/: test_basic.py  test_conformance.py  test_ffrouter.py
