[package]
name = "ffroute"
version = "0.1.1"
edition = "2021"
description = "Starlette-compatible URL route matcher as a native Python extension."
license = "MIT"
repository = "https://github.com/jirikuncar/ffroute"
homepage = "https://github.com/jirikuncar/ffroute"
readme = "README.md"
keywords = ["starlette", "fastapi", "routing", "pyo3", "router"]
categories = ["network-programming", "web-programming"]
publish = false

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
regex = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
